--- a/public/manifest.json
+++ b/public/manifest.json
@@ -10,6 +10,6 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#2563EB",
+  "theme_color": "#F6F7F9",
   "background_color": "#F6F7F9"
 }
